src/objects/ContactPortalUserHistory__c.object
<CustomObject>
    <description>When ever there is any change in ADUA permission of a contact in Salesforce we need to Log changes made by User in Salesforce.</description>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>ApexClass</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexVisualforcePage__c</fullName>
        <label>ApexVisualforcePage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date when the user permission was changed</description>
        <label>Changed_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Portal_User__c</fullName>
        <description>When ever there is any change in ADUA permission of a contact in Salesforce we need to Log changes made by User in Salesforce.</description>
        <label>Contact Portal User</label>
        <referenceTo>Contact_Portal_User__c</referenceTo>
        <relationshipName>Contact_Portal_User_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GetUser_Api_Response__c</fullName>
        <description>Permissions returned from portal get user call before edit</description>
        <label>GetUser_Api_Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GetUser_Api_Status__c</fullName>
        <description>Status of get user api call</description>
        <label>GetUser_Api_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_New_User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_User_Status__c</fullName>
        <label>Save_User_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCall_Status__c</fullName>
        <description>Status of Create/Update user Call.</description>
        <label>UserCall_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce User who has done the change</description>
        <inlineHelpText>Salesforce User who has done the change</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>user</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ContactPortalUserHistory</label>
    <nameField>
        <label>ContactPortalUserHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactPortalUserHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>